@@ -1,5 +1,6 @@
 Version 2.5.15dev:
 
+* Updated emulation core from WinUAE 2900b16.
 * Fixed bug when adding 2nd fast memory bank in non-autoconfig mode.
 * Allow 1 to be used as true/yes for boolean uae_* options.
 * Removed cpu_idle override, added new cpu_idle option (0 - 10).
